# affinitas

./: .gitignore  LICENSE  README.md  render.yaml
affinitas-backend/: pyproject.toml
affinitas-backend/affinitas_backend/: config.py  requirements.txt
affinitas-backend/affinitas_backend/chat/: __init__.py  chat.py  master_chat.py  npc_chat.py  utils.py
affinitas-backend/affinitas_backend/db/: mongo.py  utils.py
affinitas-backend/affinitas_backend/models/: game_data.py  journal_data.py
affinitas-backend/affinitas_backend/models/beanie/: npc.py  save.py
affinitas-backend/affinitas_backend/models/chat/: chat.py
affinitas-backend/affinitas_backend/models/schemas/: auth.py  chat.py  game.py  npcs.py
affinitas-backend/affinitas_backend/server/: dependencies.py  lifespan.py  main.py  message.py  utils.py  uuid.py
affinitas-backend/affinitas_backend/server/hello/: hello_world.py  message.py
affinitas-backend/affinitas_backend/server/routers/: auth.py  game.py  hello.py  npcs.py  saves.py  session.py
affinitas-backend/src/affinitas_backend/: __main__.py
affinitas-backend/src/db/: database.py  mongo.py
affinitas-frontend/Affinitas/Assets/: UniversalRenderPipelineGlobalSettings.asset
affinitas-frontend/Affinitas/Assets/Prefabs/: CharButton.prefab  Fish.prefab  InfoPanel.prefab  Item.prefab  ItemImage.prefab  Npc1Profile.prefab  Npc1Ui.prefab  QuestText.prefab  RESTClient.prefab  SavedGame.prefab  ServerConnection.prefab  SpeechBubble1.prefab  (+2 more)
affinitas-frontend/Affinitas/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
(+38 files in other folders)
