[project]
name = "affinitas-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beanie>=1.29.0",
    "fastapi[standard]>=0.115.12",
    "motor>=3.7.0",
    "openai>=1.72.0",
    "pymongo>=4.12.0",
    "python-dotenv>=1.1.0",
    "slowapi>=0.1.9",
]
