[project]
name = "affinitas-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beanie>=1.29.0",
    "fastapi[standard]>=0.115.12",
    "langchain[openai]>=0.3.24",
    "langgraph>=0.3.34",
    "motor>=3.7.0",
    "pydantic-settings>=2.9.1",
    "pymongo>=4.12.0",
    "slowapi>=0.1.9",
]
